--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "axios": "^1.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-tsparticles": "^2.11.0",
+    "sass": "^1.64.1",
+    "tsparticles": "^2.11.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -22,6 +25,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "pixel-borders": "^1.1.4",
     "vite": "^4.4.5"
   }
 }
